crates/qwik-optimizer-oxc/tests/snapshots/example_invalid_references.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test_App_component_XumqEURaLxI");
const i_w3unmdi0sm4 = () => import("./test_App_w3unmdi0sm4");
import { $, component$ } from "@qwik.dev/core";
const I1 = 12;
const [I2, { I3, v1: [I4], I5 = v2, ...I6 }, I7 = v3, ...I8] = obj;
function I9() {}
class I10 {}
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.jsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_w3unmdi0sm4 = () => import("./test.tsx_App_w3unmdi0sm4");
export const App_component_XumqEURaLxI = (_rawProps) => {
	console.log(I1, I2, I3, I4, I5, I6, I7, I8, I9);
	console.log(itsok, v1, v2, v3, obj);
	return /* @__PURE__ */ qrl(i_w3unmdi0sm4, "App_w3unmdi0sm4");
};

=== test.tsx_App_w3unmdi0sm4.jsx === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
export const App_w3unmdi0sm4 = () => {
	return /* @__PURE__ */ _jsxSorted(I10, null, null, null, 3, null);
};
