crates/qwik-optimizer-oxc/tests/snapshots/example_issue_4438.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export const App = component$(() => {
  const toggle = useSignal(false);
  return (
    <>
      <div data-nu={toggle.value ? $localize`singular` : "plural"}></div>
      <div>{toggle.value ? $localize`singular` : $localize`plural`}</div>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value ? $localize`singular` : "plural";
const _hf0_str = "p0.value?$localize`singular`:\"plural\"";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl(() => {
	const toggle = useSignal(false);
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [/* @__PURE__ */ _jsxSorted("div", null, { "data-nu": _fnSignal(_hf0, [toggle], _hf0_str) }, null, 3, "u6_0"), /* @__PURE__ */ _jsxSorted("div", null, null, toggle.value ? $localize`singular` : $localize`plural`, 3, "u6_1")], 1, "u6_2");
}, "App_component_XumqEURaLxI"));
