crates/qwik-optimizer-oxc/tests/snapshots/example_jsx.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, h, Fragment } from '@qwik.dev/core';

export const Lightweight = (props) => {
	return (
		<div>
			<>
				<div/>
				<button {...props}/>
			</>
		</div>
	)
};

export const Foo = component$((props) => {
	return $(() => {
		return (
			<div>
				<>
					<div class="class"/>
					<div class="class"></div>
					<div class="class">12</div>
				</>
				<div class="class">
					<Lightweight {...props}/>
				</div>
				<div class="class">
					<div/>
					<div/>
					<div/>
				</div>
				<div class="class">
					{children}
				</div>
			</div>
		)
	});
}, {
	tagName: "my-foo",
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
const i_gZqPatVoDqw = () => import("./test.tsx_Foo_component_gZqPatVoDqw");
const i_T0dY5k6mBgU = () => import("./test.tsx_Foo_T0dY5k6mBgU");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { h } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
export const Lightweight = (props) => {
	return /* @__PURE__ */ _jsxSorted("div", null, null, /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [/* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null), /* @__PURE__ */ _jsxSplit("button", { ..._getVarProps(props) }, _getConstProps(props), null, 0, null)], 1, "u6_0"), 3, "u6_1");
};
export const Foo = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));

=== test.tsx_Foo_component_gZqPatVoDqw.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_T0dY5k6mBgU = () => import("./test.tsx_Foo_T0dY5k6mBgU");
export const Foo_component_gZqPatVoDqw = (props) => {
	return /* @__PURE__ */ qrl(i_T0dY5k6mBgU, "Foo_T0dY5k6mBgU", [props, children]);
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_T0dY5k6mBgU.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { Lightweight } from "./test";
export const Foo_T0dY5k6mBgU = () => {
	const props = _captures[0];
	const children = _captures[1];
	return /* @__PURE__ */ _jsxSorted("div", null, null, [
		/* @__PURE__ */ _jsxSorted(_Fragment, null, null, [
			/* @__PURE__ */ _jsxSorted("div", null, { class: "class" }, null, 3, "u6_2"),
			/* @__PURE__ */ _jsxSorted("div", null, { class: "class" }, null, 3, "u6_3"),
			/* @__PURE__ */ _jsxSorted("div", null, { class: "class" }, "12", 3, "u6_4")
		], 1, "u6_5"),
		/* @__PURE__ */ _jsxSorted("div", null, { class: "class" }, /* @__PURE__ */ _jsxSplit(Lightweight, { ..._getVarProps(props) }, _getConstProps(props), null, 0, null), 3, "u6_6"),
		/* @__PURE__ */ _jsxSorted("div", null, { class: "class" }, [
			/* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null),
			/* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null),
			/* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null)
		], 1, "u6_7"),
		/* @__PURE__ */ _jsxSorted("div", null, { class: "class" }, children, 3, "u6_8")
	], 1, "u6_9");
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_T0dY5k6mBgU",
  "entry": null,
  "displayName": "test.tsx_Foo",
  "hash": "T0dY5k6mBgU",
  "canonicalFilename": "test.tsx_Foo_T0dY5k6mBgU",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "props",
    "children"
  ]
}
*/
