crates/qwik-optimizer-oxc/tests/snapshots/example_lightweight_functional.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_gZqPatVoDqw = () => import("./test.tsx_Foo_component_gZqPatVoDqw");
const i_ODPc00H0FSA = () => import("./test.tsx_button_q_e_click_ODPc00H0FSA");
const i_ODPc00H0FSA = () => import("./test.tsx_button_q_e_click_ODPc00H0FSA");
import { $, component$ } from "@qwik.dev/core";
export const Foo = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));
export function Button({ text, color }) {
	return <button onColor$={color} onClick$={() => console.log(text, color)}>{text}</button>;
}
export const ButtonArrow = ({ text, color }) => {
	return <button onColor$={color} onClick$={() => console.log(text, color)}>{text}</button>;
};

=== test.tsx_Foo_component_gZqPatVoDqw.tsx === (ENTRY)
export const Foo_component_gZqPatVoDqw = (props) => {
	return <div>
			<Button {...props} />
			<ButtonArrow {...props} />
		</div>;
}

=== test.tsx_button_q_e_click_ODPc00H0FSA.tsx === (ENTRY)


=== test.tsx_button_q_e_click_ODPc00H0FSA.tsx === (ENTRY)
